--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,15 +3,16 @@ package="com.example.s.sunshinesari.app">
 
 <uses-permission android:name="android.permission.INTERNET" />
 
-<application android:allowBackup="true" android:icon="@mipmap/ic_launcher" android:label="@string/app_name"
+<application android:allowBackup="true" android:logo="@mipmap/ic_launcher" android:icon="@mipmap/ic_launcher" android:label="@string/app_name"
     android:supportsRtl="true" android:theme="@style/AppTheme">
-    <activity android:name=".MainActivity" android:label="@string/app_name" android:theme="@style/AppTheme.NoActionBar">
+    <activity android:name=".MainActivity"  android:theme="@style/AppTheme.NoActionBar">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
     </activity>
+
     <activity android:name=".DetailActivity" android:label="@string/title_activity_detail"
         android:parentActivityName=".MainActivity" android:theme="@style/AppTheme">
         <meta-data android:name="android.support.PARENT_ACTIVITY" android:value="com.example.s.sunshinesari.app.MainActivity" />
@@ -28,6 +29,7 @@ package="com.example.s.sunshinesari.app">
         android:authorities="com.example.s.sunshinesari.app"
         android:name=".data.WeatherProvider"
         android:exported="true"/>
+    <service android:name=".service.SunshineService"/>
 </application>
 
 </manifest>
